# tool-shared-rust-rootdetect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  commitlint.config.js  deny.toml  repository.yaml
.github/workflows/: ci.yml  release.yml
docs/: adrs.jsonl  spec.md
scripts/: release.sh
src/: lib.rs  main.rs
