[package]
name = "project-root-detector"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Detect project root directories from source file paths"
license = "MIT"
keywords = ["project", "root", "detection", "monorepo"]
categories = ["development-tools", "filesystem"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
